--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Doppio+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="http://css-tricks.github.com/AnythingSlider/css/theme-metallic.css">
     <link rel="stylesheet" type="text/css" href="http://css-tricks.github.com/AnythingSlider/css/anythingslider.css"/>
@@ -43,8 +44,8 @@
             <a class="span2" href="portfolio.html">PORTFOLIO</a>
             <div class="span2">THE TEAM</div>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
-            <a class="span2" href="contact.html">CONTACT</a>
-            <div class="span2">ABOUT</div>
+            <a class="span2" style="text-decoration: line-through;" href="contact.html">CONTACT</a>
+            <div class="span2">BLOG</div>
         </div>
     </div>
 
@@ -55,8 +56,8 @@
 	<div class="container ">
 		<div class="container-fluid" id="intro">
 		<div class="container ">
-			<div class="row span12 center" style="margin-top: 60px;height: 800px;">
-                <div style="text-align: center;font-size: 32px; font-weight: bold;margin-top: 50px;">STAR FARM VENTURES</div>
+			<div class="row span12 center" style="margin-top: 60px;height: 800px;font-size: 22px;line-height: 29px;">
+                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">STAR FARM VENTURES</div>
                 <div class="row" style="margin-top: 50px;">
                     <div class="span5 offset1">
                         <i class="icon-home icon-4x pull-left"></i>
@@ -91,25 +92,53 @@
                         </div>
                     </div>
                 </div>
-                <div style="text-align: center;font-size: 32px; font-weight: bold;margin-top: 50px;">OUR FRIENDS</div>
+                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">OUR FRIENDS</div>
                 <div class="row" style="margin-top: 50px;">
                     <div class="span6">
-                        <div class="span2">APPMYDAY</div><div class="span3">info@APPMY DAY.co.il</div><br/>
-                        <div class="span2">BIZZABO</div><div class="span3">BIZZABO.com</div><br/>
-                        <div class="span2">EQUALA</div><div class="span3">community@EQUALA.fm</div><br/>
-                        <div class="span2">JUSTAD</div><div class="span3">info@JUSTAD.mobi</div><br/>
-                        <div class="span2">MORPHEUS</div><div class="span3">MORPHE.US.com</div><br/>
-                        <div class="span2">ROOMIXER</div><div class="span3">info@ROOMIXER.com</div><br/>
-                        <div class="span2">RINGYA</div><div class="span3">feedback@RINGYA.com</div><br/>
+                        <div class="row">
+                            <div class="span2">APPMYDAY</div><div class="span3">info@APPMY DAY.co.il</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">BIZZABO</div><div class="span3">BIZZABO.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">EQUALA</div><div class="span3">community@EQUALA.fm</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">JUSTAD</div><div class="span3">info@JUSTAD.mobi</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">MORPHEUS</div><div class="span3">MORPHE.US.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">ROOMIXER</div><div class="span3">info@ROOMIXER.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">RINGYA</div><div class="span3">feedback@RINGYA.com</div><br/>
+                        </div>
                     </div>
                     <div class="span6">
-                        <div class="span2">WISEPRICER</div><div class="span3">WISEPRICER.com/contact</div><br/>
-                        <div class="span2">SWAYY</div><div class="span3">info@SWAYY.co</div><br/>
-                        <div class="span2">PLAYGEM</div><div class="span3">PLAYGEM.com</div><br/>
-                        <div class="span2">7 ELEMENTS</div><div class="span3">info@7ELEMENTSSTUDIOS.com</div><br/>
-                        <div class="span2">DO ALBUMS</div><div class="span3">DOALBUMS.com</div><br/>
-                        <div class="span2">ASKEM</div><div class="span3">support@askem.com</div><br/>
-                        <div class="span2">LICENSARIO</div><div class="span3">LICENSARIO.com/contact-us</div><br/>
+                        <div class="row">
+                            <div class="span2">WISEPRICER</div><div class="span3">WISEPRICER.com/contact</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">SWAYY</div><div class="span3">info@SWAYY.co</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">PLAYGEM</div><div class="span3">PLAYGEM.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">7 ELEMENTS</div><div class="span3">info@7ELEMENTSSTUDIOS.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">DO ALBUMS</div><div class="span3">DOALBUMS.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">ASKEM</div><div class="span3">support@askem.com</div><br/>
+                        </div>
+                        <div class="row">
+                            <div class="span2">LICENSARIO</div><div class="span3">LICENSARIO.com/contact-us</div><br/>
+                        </div>
                     </div>
                 </div>
             </div>
