--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,15 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Star Farm Ventures - Bringing Israeli startups to the US market</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+
     <meta name="description" content="Start Farm Ventures">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Doppio+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Unlock' rel='stylesheet' type='text/css'>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="http://css-tricks.github.com/AnythingSlider/css/theme-metallic.css">
     <link rel="stylesheet" type="text/css" href="http://css-tricks.github.com/AnythingSlider/css/anythingslider.css"/>
@@ -40,11 +42,11 @@
 
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
-            <a class="span2" href="portfolio.html">PORTFOLIO</a>
+            <a class="span2" style="text-decoration: line-through;" href="portfolio.html">PORTFOLIO</a>
             <div class="span2">THE TEAM</div>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
             <a class="span2" href="contact.html">CONTACT</a>
-            <div class="span2">ABOUT</div>
+            <div class="span2">BLOG</div>
         </div>
     </div>
 
@@ -86,9 +88,9 @@
 
                         <div class="equala founders pull-right">
                             <p class="founders_title">Founders</p>
-                            <p>Lior Aharoni</p>
-                            <p>Zohar Aharoni</p>
-                            <p>Liad Hacmon</p>
+                            <p>LIOR AHARONI</p>
+                            <p>LIAD HACMON</p>
+                            <p>ZOHAR AHARONI</p>
                         </div>
 
                     </li>
@@ -157,7 +159,7 @@
                         </div>
                     </li>
                     <li>
-                        <div style="width: 450px;margin: auto;">
+                        <div style="width: 500px;margin: auto;">
                             Hello<br/>&nbsp; wisepricer.
                         </div>
                         <a class="wisepricer_logo" href="http://www.equala.fm"></a>
@@ -250,7 +252,7 @@
                         </div>
                     </li>
                     <li>
-                        <div style="width: 450px;margin: auto;">
+                        <div style="width: 500px;margin: auto;">
                             Hello<br/>&nbsp; morpheus.
                         </div>
                         <a class="morpheus_logo" href="http://www.equala.fm"></a>
@@ -311,7 +313,7 @@
                         </div>
                     </li>
                     <li>
-                        <div style="width: 450px;margin: auto;">
+                        <div style="width: 500px;margin: auto;">
                             Hello<br/>&nbsp; doalbums.
                         </div>
                         <a class="doalbums_logo" href="http://www.equala.fm"></a>
@@ -371,7 +373,7 @@
                         </div>
                     </li>
                     <li>
-                        <div style="width: 450px;margin: auto;">
+                        <div style="width: 500px;margin: auto;">
                             Hello<br/>&nbsp; licensario.
                         </div>
                         <a class="licensario_logo" href="http://www.equala.fm"></a>
@@ -468,7 +470,7 @@
                         </div>
                     </li>
                     <li>
-                        <div style="width: 450px;margin: auto;">
+                        <div style="width: 500px;margin: auto;">
                             Hello<br/>&nbsp; 7elements.
                         </div>
                         <a class="seven_elements_logo" href="http://www.equala.fm"></a>
