--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
             <a class="span2" style="text-decoration: line-through;" href="portfolio.html">PORTFOLIO</a>
-            <div class="span2">THE TEAM</div>
+            <a class="span2" href="team.html">THE TEAM</a>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
             <a class="span2" href="contact.html">CONTACT</a>
             <div class="span2">BLOG</div>
