--- a/team.html
+++ b/team.html
@@ -42,108 +42,97 @@
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
             <a class="span2" href="portfolio.html">PORTFOLIO</a>
-            <a class="span2" href="team.html">THE TEAM</a>
+            <a class="span2" style="text-decoration: line-through;" href="team.html">THE TEAM</a>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
-            <a class="span2" style="text-decoration: line-through;" href="contact.html">CONTACT</a>
-            <div class="span2">BLOG</div>
+            <a class="span2" href="contact.html">CONTACT</a>
+            <div class="span2 pull-right">BLOG</div>
         </div>
     </div>
 
     
     
     <!-- #intro -->
-    <div>
-	<div class="container ">
-		<div class="container-fluid" id="intro">
+    <div style="background: url('assets/img/team_bg.png') repeat;">
+	<div class="container">
 		<div class="container ">
-			<div class="row span12 center" style="margin-top: 60px;height: 800px;font-size: 22px;line-height: 29px;">
-                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">STAR FARM VENTURES</div>
-                <div class="row" style="margin-top: 50px;">
-                    <div class="span5 offset1">
-                        <i class="icon-home icon-4x pull-left"></i>
-                        <div style="margin-left: 10px; float: left;">
-                        19 WEST 21ST <br/>
-                        NEW YORK , NEW YORK <br/>
-                        SUITE 402
-                        </div>
-                    </div>
-                    <div class="span5 offset1">
-                        <i class="icon-phone icon-4x pull-left"></i>
-                        <div style="margin-left: 10px; float: left;">
-                            <br/>
-                            646.670.0025
-                        </div>
-                    </div>
-                </div>
-                <div class="row" style="margin-top: 50px;">
-                    <div class="span5 offset1">
-                        <i class="icon-comments icon-4x pull-left"></i>
-                        <div style="margin-left: 10px; float: left;">
-                            Facebook<br/>
-                            Instagram<br/>
-                            Twitter
-                        </div>
-                    </div>
-                    <div class="span5 offset1">
-                        <i class="icon-envelope icon-4x pull-left"></i>
-                        <div style="margin-left: 10px; float: left;">
-                            <br/>
-                            info@starfarmventures.com
+			<div class="row span10 center" style="margin-top: 60px;height: 800px;font-size: 22px;line-height: 29px;background: #ffffff; border: 3px solid #57585A;margin-bottom: 50px;box-shadow: 5px 5px 5px #888888;">
+                <div class="row span6 center" style="padding: 30px;font-size: 22px;line-height: 29px;border-bottom: 5px dotted #D1D2D4;">
+                    <img src="assets/img/joey.png" style="float: left;"/>
+                    <div style="margin-top: 35px;margin-left: 30px;float: left;">
+                        <div>JoeyLow</div>
+                        <div>Founder</div>
+                        <div class="social" style="margin-left: -5px;">
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-envelope icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-twitter icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-instagram icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-linkedin icon-light"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">OUR FRIENDS</div>
-                <div class="row" style="margin-top: 50px;">
-                    <div class="span6">
-                        <div class="row">
-                            <div class="span2">APPMYDAY</div><div class="span3">info@APPMY DAY.co.il</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">BIZZABO</div><div class="span3">BIZZABO.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">EQUALA</div><div class="span3">community@EQUALA.fm</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">JUSTAD</div><div class="span3">info@JUSTAD.mobi</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">MORPHEUS</div><div class="span3">MORPHE.US.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">ROOMIXER</div><div class="span3">info@ROOMIXER.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">RINGYA</div><div class="span3">feedback@RINGYA.com</div><br/>
+                <div class="row span6 center" style="font-size: 22px;line-height: 29px; padding: 30px;border-bottom: 5px dotted #D1D2D4;">
+                    <img src="assets/img/tanya.png" style="float: left;"/>
+                    <div style="margin-top: 35px;margin-left: 30px;float: left;">
+                        <div>JoeyLow</div>
+                        <div>Founder</div>
+                        <div class="social" style="margin-left: -5px;">
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-envelope icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-twitter icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-instagram icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-linkedin icon-light"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="span6">
-                        <div class="row">
-                            <div class="span2">WISEPRICER</div><div class="span3">WISEPRICER.com/contact</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">SWAYY</div><div class="span3">info@SWAYY.co</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">PLAYGEM</div><div class="span3">PLAYGEM.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">7 ELEMENTS</div><div class="span3">info@7ELEMENTSSTUDIOS.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">DO ALBUMS</div><div class="span3">DOALBUMS.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">ASKEM</div><div class="span3">support@askem.com</div><br/>
-                        </div>
-                        <div class="row">
-                            <div class="span2">LICENSARIO</div><div class="span3">LICENSARIO.com/contact-us</div><br/>
+                </div>
+                <div class="row span6 center" style="padding: 30px;font-size: 22px;line-height: 29px;">
+                    <img src="assets/img/rebecca.png" style="float: left;"/>
+                    <div style="margin-top: 35px;margin-left: 30px;float: left;">
+                        <div>JoeyLow</div>
+                        <div>Founder</div>
+                        <div class="social" style="margin-left: -5px;">
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-envelope icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-twitter icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-instagram icon-light"></i>
+                            </a>
+                            <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                                <i class="icon-circle icon-stack-base"></i>
+                                <i class="icon-linkedin icon-light"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
 		</div>
-	</div>
     </div>
     <!-- ends Intro -->
     <!-- #intro -->
