--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
                     <img src="assets/img/tanya.png" style="float: left;"/>
                     <div style="margin-top: 35px;margin-left: 30px;float: left;">
                         <div>JoeyLow</div>
-                        <div>Founder</div>
+                        <div>Co-Founder</div>
                         <div class="social" style="margin-left: -5px;">
                             <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
                                 <i class="icon-circle icon-stack-base"></i>
@@ -110,7 +110,7 @@
                     <img src="assets/img/rebecca.png" style="float: left;"/>
                     <div style="margin-top: 35px;margin-left: 30px;float: left;">
                         <div>JoeyLow</div>
-                        <div>Founder</div>
+                        <div>jr. marketing director</div>
                         <div class="social" style="margin-left: -5px;">
                             <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
                                 <i class="icon-circle icon-stack-base"></i>
