--- a/index.html
+++ b/index.html
@@ -38,49 +38,48 @@
     <!-- ends Intro -->
 </div>
 <div class="footer">
-  <div class="container-fluid" id="footer">
-      <div class="row-fluid">
-          <div class="span4">
-              <div class="row-fluid contact-title">
-                  GET IN TOUCH
-              </div>
-              <div class="row-fluid contact-info">
-                  <i class="icon-envelope"></i> <a href="mailto:info@starmfarmventures.org">info@starfarmventures.com</a><br/>
-                  <i class="icon-phone"></i> <a href="callto:+16466700025">&nbsp;646.670.0025</a>
-              </div>
-          </div>
-          <div class="span5">
-              <div class="row-fluid contact-title">
-                  LOOKING FOR WORK
-              </div>
-              <div class="row-fluid contact-info">
-                  First apply, then apply yourself. Click
-                  here to find out more. <br/>
-              </div>
-          </div>
-          <div class="span3">
-              <div class="row-fluid contact-title">
-                  FOLLOW US
-              </div>
-              <div class="row-fluid contact-info">
-                  <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-twitter icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://instagram.com/starfarmventures">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-instagram icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-linkedin icon-dark"></i>
-                  </a>
-                  <br/>
-                  <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container-fluid" id="footer">
+        <div class="row-fluid">
+            <div class="span4">
+                <div class="row-fluid contact-title">
+                    GET IN TOUCH
+                </div>
+                <div class="row-fluid contact-info">
+                    E: <a href="mailto:info@starfarmventures.com">info@starmfarmventures.com</a><br/>
+                    P: <a href="callto:+16466700025">+1.646.670.0025</a>
+                </div>
+            </div>
+            <div class="span5">
+                <div class="row-fluid contact-title">
+                    OPPORTUNITIES
+                </div>
+                <div class="row-fluid contact-info">
+                    Coming soon...<br/>
+                </div>
+            </div>
+            <div class="span3">
+                <div class="row-fluid contact-title">
+                    FOLLOW US
+                </div>
+                <div class="row-fluid contact-info">
+                    <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-twitter icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-instagram icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-linkedin icon-dark"></i>
+                    </a>
+                    <br/>
+                    <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
 $(function () {
