--- a/contact.html
+++ b/contact.html
@@ -57,21 +57,22 @@
 		<div class="container-fluid" id="intro">
 		<div class="container ">
 			<div class="row span12 center" style="margin-top: 60px;height: 800px;font-size: 22px;line-height: 29px;">
-                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">STAR FARM VENTURES</div>
+                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;color: #00008b;">STAR FARM VENTURES</div>
                 <div class="row" style="margin-top: 50px;">
                     <div class="span5 offset1">
                         <i class="icon-home icon-4x pull-left"></i>
                         <div style="margin-left: 10px; float: left;">
                         19 WEST 21ST <br/>
                         NEW YORK , NEW YORK <br/>
-                        SUITE 402
+                        SUITE 402 <br/>
+                        <a style="color: #00008b;" href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=19+W+21st+St,+New+York,+NY&aq=0&oq=19+W+&sll=40.737642,-74.000153&sspn=0.009625,0.022724&vpsrc=0&ie=UTF8&hq=&hnear=19+W+21st+St,+New+York,+10010&ll=40.741226,-73.991718&spn=0.009625,0.022724&t=m&z=16&iwloc=A">(map)</a>
                         </div>
                     </div>
                     <div class="span5 offset1">
                         <i class="icon-phone icon-4x pull-left"></i>
                         <div style="margin-left: 10px; float: left;">
                             <br/>
-                            646.670.0025
+                            <a style="color: #000000;" href="callto:+16466700025">+1.646.670.0025</a>
                         </div>
                     </div>
                 </div>
@@ -79,20 +80,20 @@
                     <div class="span5 offset1">
                         <i class="icon-comments icon-4x pull-left"></i>
                         <div style="margin-left: 10px; float: left;">
-                            Facebook<br/>
-                            Instagram<br/>
-                            Twitter
+                            <!--a href="">Facebook</a><br/-->
+                            <a style="color: #000000;" href="http://instagram.com/starfarmventures">Instagram</a><br/>
+                            <a style="color: #000000;" href="https://twitter.com/StarFarmVenture">Twitter</a><br/>
                         </div>
                     </div>
                     <div class="span5 offset1">
                         <i class="icon-envelope icon-4x pull-left"></i>
                         <div style="margin-left: 10px; float: left;">
                             <br/>
-                            info@starfarmventures.com
+                            <a style="color:black;" href="mailto:info@starfarmventures.com">info@starmfarmventures.org</a>
                         </div>
                     </div>
                 </div>
-                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;">OUR FRIENDS</div>
+                <div style="text-align: center;font-size: 36px; font-weight: bold;margin-top: 50px;color: #00008b;">OUR FRIENDS</div>
                 <div class="row" style="margin-top: 50px;">
                     <div class="span6">
                         <div class="row">
@@ -157,17 +158,16 @@
                   GET IN TOUCH
               </div>
               <div class="row-fluid contact-info">
-                  E: <a href="mailto:info@starmfarmventures.org">info@starmfarmventures.org</a><br/>
-                  P: <a href="callto:+19139083876">913.908.3876</a>
+                  E: <a href="mailto:info@starfarmventures.com">info@starmfarmventures.com</a><br/>
+                  P: <a href="callto:+16466700025">+1.646.670.0025</a>
               </div>
           </div>
           <div class="span5">
               <div class="row-fluid contact-title">
-                  LOOKING FOR WORK
+                  OPPORTUNITIES
               </div>
               <div class="row-fluid contact-info">
-                  First apply, then apply yourself. Click
-                  here to find out more. <br/>
+                  Coming soon...<br/>
               </div>
           </div>
           <div class="span3">
