--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     
     
     <!-- #intro -->
-    <div style="background: #D1D2D4;">
+    <div style="background: #C9CCCB;">
 	<div class="container">
 		<div class="container-fluid" id="intro">	
 		<div class="container">	
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>www.equala.fm</p>
+                            <p><a href="http://www.equala.fm">www.equala.fm</a></p>
                         </div>
 
                         <div class="equala founders pull-right">
@@ -116,7 +116,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>bizzabo.com</p>
+                            <p><a href="http://bizzabo.com">bizzabo.com</a></p>
                         </div>
 
                         <div class="bizzabo founders pull-right">
@@ -148,7 +148,7 @@
                         </div>
 
                         <div class="appmyday3 url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>bizzabo.com</p>
+                            <p><a href="http://www.appmyday.co.il/">appmyday.co.il</a></p>
                         </div>
 
                         <div class="appmyday founders pull-right">
@@ -179,7 +179,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>wisepricer.com</p>
+                            <p><a href="http://wisepricer.com">wisepricer.com</a></p>
                         </div>
 
                         <div class="wisepricer founders pull-right">
@@ -211,7 +211,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>roomixer.com</p>
+                            <p><a href="http://roomixer.com">roomixer.com</a></p>
                         </div>
 
                         <div class="roomixer founders pull-right">
@@ -242,7 +242,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>swayy.co</p>
+                            <p><a href="http://swayy.co">swayy.co</a></p>
                         </div>
 
                         <div class="swayy founders pull-right">
@@ -273,7 +273,7 @@
                         </div>
 
                         <div class="whitebg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>morphe.us.com</p>
+                            <p><a href="http://morphe.us.com">morphe.us.com</a></p>
                         </div>
 
                         <div class="morpheus founders pull-right">
@@ -303,7 +303,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>playgem.co</p>
+                            <p><a href="http://playgem.co">playgem.co</a></p>
                         </div>
 
                         <div class="playgem founders pull-right">
@@ -333,7 +333,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>doalbums.com</p>
+                            <p><a href="http://doalbums.com">doalbums.com</a></p>
                         </div>
 
                         <div class="blackbg founders pull-right">
@@ -363,7 +363,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>justad.mobi</p>
+                            <p><a href="http://justad.mobi">justad.mobi</a></p>
                         </div>
 
                         <div class="justad founders pull-right">
@@ -394,7 +394,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>justad.mobi</p>
+                            <p><a href="http://www.licensario.com/">www.licensario.com</a></p>
                         </div>
 
                         <div class="licensario founders pull-right">
@@ -425,7 +425,7 @@
                         </div>
 
                         <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>askem.com</p>
+                            <p><a href="http://askem.com">askem.com</a></p>
                         </div>
 
                         <div class="askem founders pull-right">
@@ -458,7 +458,7 @@
                         </div>
 
                         <div class="ringya2 url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>ringya.com</p>
+                            <p><a href="http://ringya.com">ringya.com</a></p>
                         </div>
 
                         <div class="ringya founders pull-right">
@@ -490,7 +490,7 @@
                         </div>
 
                         <div class="ringya2 url pull-left" style="margin-left: 50px;margin-top: 0px;">
-                            <p>7elementsstudios.com</p>
+                            <p><a href="http://7elementsstudios.com">7elementsstudios.com</a></p>
                         </div>
 
                         <div class="seven_elements2 founders pull-right">
@@ -509,49 +509,48 @@
     <!-- ends Intro -->
 </div>
 <div class="footer">
-  <div class="container-fluid" id="footer">
-      <div class="row-fluid">
-          <div class="span4">
-              <div class="row-fluid contact-title">
-                  GET IN TOUCH
-              </div>
-              <div class="row-fluid contact-info">
-                  E: <a href="mailto:info@starmfarmventures.org">info@starmfarmventures.org</a><br/>
-                  P: <a href="callto:+19139083876">913.908.3876</a>
-              </div>
-          </div>
-          <div class="span5">
-              <div class="row-fluid contact-title">
-                  LOOKING FOR WORK
-              </div>
-              <div class="row-fluid contact-info">
-                  First apply, then apply yourself. Click
-                  here to find out more. <br/>
-              </div>
-          </div>
-          <div class="span3">
-              <div class="row-fluid contact-title">
-                  FOLLOW US
-              </div>
-              <div class="row-fluid contact-info">
-                  <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-twitter icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://instagram.com/starfarmventures">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-instagram icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-linkedin icon-dark"></i>
-                  </a>
-                  <br/>
-                  <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container-fluid" id="footer">
+        <div class="row-fluid">
+            <div class="span4">
+                <div class="row-fluid contact-title">
+                    GET IN TOUCH
+                </div>
+                <div class="row-fluid contact-info">
+                    E: <a href="mailto:info@starfarmventures.com">info@starmfarmventures.com</a><br/>
+                    P: <a href="callto:+16466700025">+1.646.670.0025</a>
+                </div>
+            </div>
+            <div class="span5">
+                <div class="row-fluid contact-title">
+                    OPPORTUNITIES
+                </div>
+                <div class="row-fluid contact-info">
+                    Coming soon...<br/>
+                </div>
+            </div>
+            <div class="span3">
+                <div class="row-fluid contact-title">
+                    FOLLOW US
+                </div>
+                <div class="row-fluid contact-info">
+                    <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-twitter icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-instagram icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-linkedin icon-dark"></i>
+                    </a>
+                    <br/>
+                    <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
 $(function () {
