--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
                 <div class="row span6 center" style="padding: 30px;font-size: 22px;line-height: 29px;border-bottom: 5px dotted #D1D2D4;">
                     <img src="assets/img/joey.png" style="float: left;"/>
                     <div style="margin-top: 35px;margin-left: 30px;float: left;">
-                        <div>JoeyLow</div>
+                        <div>Joey Low</div>
                         <div>Founder</div>
                         <div class="social" style="margin-left: -5px;">
                             <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
@@ -84,7 +84,7 @@
                 <div class="row span6 center" style="font-size: 22px;line-height: 29px; padding: 30px;border-bottom: 5px dotted #D1D2D4;">
                     <img src="assets/img/tanya.png" style="float: left;"/>
                     <div style="margin-top: 35px;margin-left: 30px;float: left;">
-                        <div>JoeyLow</div>
+                        <div>Tanya Low</div>
                         <div>Co-Founder</div>
                         <div class="social" style="margin-left: -5px;">
                             <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
@@ -109,7 +109,7 @@
                 <div class="row span6 center" style="padding: 30px;font-size: 22px;line-height: 29px;">
                     <img src="assets/img/rebecca.png" style="float: left;"/>
                     <div style="margin-top: 35px;margin-left: 30px;float: left;">
-                        <div>JoeyLow</div>
+                        <div>Rebecca Goldberg</div>
                         <div>jr. marketing director</div>
                         <div class="social" style="margin-left: -5px;">
                             <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
@@ -139,49 +139,48 @@
     <!-- ends Intro -->
 </div>
 <div class="footer">
-  <div class="container-fluid" id="footer">
-      <div class="row-fluid">
-          <div class="span4">
-              <div class="row-fluid contact-title">
-                  GET IN TOUCH
-              </div>
-              <div class="row-fluid contact-info">
-                  E: <a href="mailto:info@starmfarmventures.org">info@starmfarmventures.org</a><br/>
-                  P: <a href="callto:+19139083876">913.908.3876</a>
-              </div>
-          </div>
-          <div class="span5">
-              <div class="row-fluid contact-title">
-                  LOOKING FOR WORK
-              </div>
-              <div class="row-fluid contact-info">
-                  First apply, then apply yourself. Click
-                  here to find out more. <br/>
-              </div>
-          </div>
-          <div class="span3">
-              <div class="row-fluid contact-title">
-                  FOLLOW US
-              </div>
-              <div class="row-fluid contact-info">
-                  <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-twitter icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://instagram.com/starfarmventures">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-instagram icon-dark"></i>
-                  </a>
-                  <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
-                      <i class="icon-circle icon-stack-base"></i>
-                      <i class="icon-linkedin icon-dark"></i>
-                  </a>
-                  <br/>
-                  <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="container-fluid" id="footer">
+        <div class="row-fluid">
+            <div class="span4">
+                <div class="row-fluid contact-title">
+                    GET IN TOUCH
+                </div>
+                <div class="row-fluid contact-info">
+                    E: <a href="mailto:info@starfarmventures.com">info@starmfarmventures.com</a><br/>
+                    P: <a href="callto:+16466700025">+1.646.670.0025</a>
+                </div>
+            </div>
+            <div class="span5">
+                <div class="row-fluid contact-title">
+                    OPPORTUNITIES
+                </div>
+                <div class="row-fluid contact-info">
+                    Coming soon...<br/>
+                </div>
+            </div>
+            <div class="span3">
+                <div class="row-fluid contact-title">
+                    FOLLOW US
+                </div>
+                <div class="row-fluid contact-info">
+                    <a class="icon-stack" href="https://twitter.com/StarFarmVenture">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-twitter icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://instagram.com/starfarmventures">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-instagram icon-dark"></i>
+                    </a>
+                    <a class="icon-stack" href="http://www.linkedin.com/company/2973233?trk=prof-exp-company-name">
+                        <i class="icon-circle icon-stack-base"></i>
+                        <i class="icon-linkedin icon-dark"></i>
+                    </a>
+                    <br/>
+                    <a style="line-height: 32px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
 $(function () {
