--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <title>Star Farm Ventures - Bringing Israeli startups to the US market</title>
 
     <meta name="description" content="Start Farm Ventures">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
@@ -42,7 +43,7 @@
 
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
-            <a class="span2" style="text-decoration: line-through;" href="portfolio.html">PORTFOLIO</a>
+            <a class="span2" href="portfolio.html" style="background: #000000;">PORTFOLIO</a>
             <a class="span2" href="team.html">THE TEAM</a>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
             <a class="span2" href="contact.html">CONTACT</a>
@@ -87,7 +88,7 @@
                         </div>
 
                         <div class="equala founders pull-right">
-                            <p class="founders_title">Founders</p>
+                            <p class="founders_title">founders</p>
                             <p>LIOR AHARONI</p>
                             <p>LIAD HACMON</p>
                             <p>ZOHAR AHARONI</p>
