--- a/avner.html
+++ b/avner.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="Luma Pictures">
     <meta property="og:type" content="company">
-    <meta property="og:url" content="http://www.equala.fm/avner.html">
+    <meta property="og:url" content="https://www.equala.fm/avner.html">
     <meta property="og:site_name" content="Luma Pictures">
     <meta property="og:image" content="http://lumapictures.com/assets/images/logo_share.gif">
     <meta property="fb:app_id" content="359545130806892">
